--- a/translations/form.de.yml
+++ b/translations/form.de.yml
@@ -1,7 +1,6 @@
 label.konferenzId: Konferenz ID
 label.email: E-Mail-Adresse
 label.name: Name
-
 label.teilnehmerEmailhinzufuegen: E-Mail-Adresse von neuen Teilnehmern eingeben
 label.teilnehmerSpeichern: Einladungsemail versenden
 label.emailModerator: E-Mail-Adresse des Organisators eingeben
@@ -21,14 +20,18 @@ option.90min: 1,5 Stunden
 option.120min: 2 Stunden
 option.240min: 4 Stunden
 option.480min: 8 Stunden
-lable.serverUrl: Jitsi-Meet-Server URL
-label.appId: App-ID
-label.appSecret: App-Secret
 label.scheduleMeeting: Einen Termin finden
 help:
   serverUrl: Ohne "https://" angeben (z.B meet.jit.si)
-  featureEnalbeByJwt: Das Plugin "Enable Feature By JWT" muss auf dem Jitsi-Meet-Server aktiviert sein. Sonst wird der JWT nicht korrekt vom Server erkannt und verarbeitet
 label:
+  standort:
+    name: Name
+    street: Straße
+    number: Hausnummer
+    plz: PLZ
+    city: Stadt
+    directions: Anfahrsbeschreibung
+
   beitretenApp: Mit der Elektron-App beitreten
   beitretenBrowser: Im Browser beitreten
   serverSmtpHostName: SMTP-Hostname
@@ -47,9 +50,6 @@ label:
   agenda: Kurze Agenda für dieses Meeting (Markdown)
   staticBackgroundColor: Hintergrundfarbe auf der Joinseite festlegen
   schowStaticBackgroundColor: Zeige eine feste Farbe, anstatt Bildern auf der Joinseite
-  featureEnalbeByJwt: "\"Enable Feature By JWT\" Plugin ist auf dem Server aktiviert"
-  dissallowScreenshareGlobal: Nur der Moderator darf seinen Bildschirm teilen
-  dissallowPrivateMessage: Nur der Moderator darf private Nachrichten an Teilnehmer senden
   puplicRoom: Öffentliche Konferenz
   showRoomOnJoinpage: Konferenz auf Joinseite anzeigen
   subscribe: Anmelden
