* self subscription is working * waiting list is working * sheduling is working

--- a/translations/form.de.yml
+++ b/translations/form.de.yml
@@ -1,4 +1,4 @@
-label.konferenzId: Konferenz ID
+label.konferenzId: Event ID
 label.email: E-Mail-Adresse
 label.name: Name
 label.teilnehmerEmailhinzufuegen: E-Mail-Adresse von neuen Teilnehmern eingeben
@@ -6,11 +6,10 @@ label.teilnehmerSpeichern: Einladungsemail versenden
 label.emailModerator: E-Mail-Adresse des Organisators eingeben
 help.emailTextfeld: Es können mehrere E-Mail-Adressen auf einmal hinzugefügt werden. Jede E-Mail-Adresse muss in eine neue Zeile geschrieben werden.
 label.organisatorhinzufuegen: Organisator hinzufügen
-label.serverKonferenz: Jitsi-Meet-Server
-label.konferenzName: Name der Konferenz
+label.serverKonferenz: Standort auswählen
+label.konferenzName: Name des Events
 label.start: Start
-label.dauerKonferenz: Dauer der Konferenz
-label.nurRegistriertenutzer: Nur registrierte Benutzer dürfen der Konferenz beitreten
+label.dauerKonferenz: Dauer des Events
 label.speichern: Speichern
 option.15min: 15 Minuten
 option.30min: 30 Minuten
