Ical ist working now with events

--- a/translations/form.de.yml
+++ b/translations/form.de.yml
@@ -30,6 +30,7 @@ label:
     plz: PLZ
     city: Stadt
     directions: Anfahrsbeschreibung
+    roomnumber: Raumnummer
 
   beitretenApp: Mit der Elektron-App beitreten
   beitretenBrowser: Im Browser beitreten
