add phonenumpber to the self subscription

--- a/translations/form.de.yml
+++ b/translations/form.de.yml
@@ -32,6 +32,7 @@ label:
     directions: Anfahrsbeschreibung
     roomnumber: Raumnummer
 
+
   beitretenApp: Mit der Elektron-App beitreten
   beitretenBrowser: Im Browser beitreten
   serverSmtpHostName: SMTP-Hostname
@@ -57,6 +58,7 @@ label:
   nachname: Nachname
   maxParticipants: Maximale Anzahl an Teilnehmer zulassen
   waitinglist: Warteliste aktivieren
+  phone: Telefonnummer
 choice:
   tls: STARTTLS/TLS
   ssl: SSL
