--- a/translations/form.fr.yml
+++ b/translations/form.fr.yml
@@ -18,6 +18,7 @@ option.45min: 45 Minuten
 option.60min: 1 Stunde
 option.90min: 1,5 Stunden
 option.120min: 2 Stunden
+option.150min: 2,5 Stunden
 option.240min: 4 Stunden
 option.480min: 8 Stunden
 label.scheduleMeeting: Einen Termin finden
