--- a/translations/form.pl.yml
+++ b/translations/form.pl.yml
@@ -19,6 +19,7 @@ option.45min: 45 Minuten
 option.60min: 1 Stunde
 option.90min: 1,5 Stunden
 option.120min: 2 Stunden
+option.150min: 2,5 Stunden
 option.240min: 4 Stunden
 option.480min: 8 Stunden
 lable.serverUrl: Jitsi-Meet-Server URL
