--- a/translations/form.vi.yml
+++ b/translations/form.vi.yml
@@ -18,6 +18,7 @@ option.45min: 45 Phút
 option.60min: 60 Phút
 option.90min: 1,5 Giờ
 option.120min: 2 Giờ
+option.150min: 2,5 Giờ
 option.240min: 4 Giờ
 option.480min: 8 Giờ
 label.scheduleMeeting: Sắp xếp cuộc họp
