--- a/translations/form.zh.yml
+++ b/translations/form.zh.yml
@@ -18,6 +18,7 @@ option.45min: 45分钟
 option.60min: 1小时
 option.90min: 1.5小时
 option.120min: 2 小时
+option.150min: 2,5 小时
 option.240min: 4 小时
 option.480min: 8 小时
 label.scheduleMeeting: 进行预约
