--- a/translations/messages+intl-icu.de.xlf
+++ b/translations/messages+intl-icu.de.xlf
@@ -93,7 +93,7 @@
         <source>Vielen Dank für die Anmeldung. Bitte bestätigen Sie Ihre Emailadresse in der Email, die wir ihnen zugeschickt haben.</source>
         <target>Vielen Dank für die Anmeldung. Bitte bestätigen Sie Ihre Emailadresse in der Email, die wir ihnen zugeschickt haben.</target>
       </trans-unit>
-      <trans-unit id="T.mgfUM" resname="Bestätigung ihrer Anmeldung zur Veranstaltung: {name}">
+      <trans-unit id="o43JPX0" resname="Bestätigung ihrer Anmeldung zur Veranstaltung: {name}">
         <source>Bestätigung ihrer Anmeldung zur Veranstaltung: {name}</source>
         <target>Bestätigung ihrer Anmeldung zur Veranstaltung: {name}</target>
       </trans-unit>
@@ -1259,7 +1259,6 @@
         <source>Anwesend</source>
         <target>Anwesend</target>
       </trans-unit>
-
       <trans-unit id="oyQoteV" resname="Sie wurden von der Teilnehmerliste entfernt">
         <source>Sie wurden von der Teilnehmerliste entfernt</source>
         <target>Sie wurden von der Teilnehmerliste entfernt</target>
@@ -1299,6 +1298,10 @@
       <trans-unit id="TsZBGW6" resname="Zusätzliche Info">
         <source>Zusätzliche Info</source>
         <target>Zusätzliche Info</target>
+      </trans-unit>
+      <trans-unit id="QSACCbS" resname="Sie haben doppelte E-Mail Adressen eingetragen">
+        <source>Sie haben doppelte E-Mail Adressen eingetragen</source>
+        <target>Sie haben doppelte E-Mail Adressen eingetragen</target>
       </trans-unit>
     </body>
   </file>
