--- a/translations/form.vi.yml
+++ b/translations/form.vi.yml
@@ -12,13 +12,19 @@ label.konferenzName: Name des Events
 label.start: Bắt đầu
 label.dauerKonferenz: Dauer des Events
 label.speichern: Lưu
+option.10min: 10 Phút
 option.15min: 15 Phút
 option.30min: 30 Phút
 option.45min: 45 Phút
 option.60min: 60 Phút
 option.90min: 1,5 Giờ
 option.120min: 2 Giờ
+option.150min: 2,5 Giờ
+option.180min: 3 Giờ
+option.210min: 3,5 Giờ
 option.240min: 4 Giờ
+option.270min: 4,5 Giờ
+option.300min: 5 Giờ
 option.480min: 8 Giờ
 label.scheduleMeeting: Sắp xếp cuộc họp
 help:
