--- a/translations/form.zh.yml
+++ b/translations/form.zh.yml
@@ -12,14 +12,20 @@ label.konferenzName: Name des Events
 label.start: 开始
 label.dauerKonferenz: Dauer des Events
 label.speichern: 保存
+option.10min: 10分钟
 option.15min: 15分钟
 option.30min: 30分钟
 option.45min: 45分钟
 option.60min: 1小时
-option.90min: 1.5小时
-option.120min: 2 小时
-option.240min: 4 小时
-option.480min: 8 小时
+option.90min: 1,5小时
+option.120min: 2小时
+option.150min: 2,5小时
+option.180min: 3小时
+option.210min: 3,5小时
+option.240min: 4小时
+option.270min: 4,5小时
+option.300min: 5小时
+option.480min: 8小时
 label.scheduleMeeting: 进行预约
 help:
   serverUrl: 输入除“https://”以外的链接（例如：meet.jit.si）
