--- a/translations/form.de.yml
+++ b/translations/form.de.yml
@@ -11,13 +11,24 @@ label.konferenzName: Name des Events
 label.start: Start
 label.dauerKonferenz: Dauer des Events
 label.speichern: Speichern
+option.10min: 10 Minuten
 option.15min: 15 Minuten
 option.30min: 30 Minuten
 option.45min: 45 Minuten
 option.60min: 1 Stunde
 option.90min: 1,5 Stunden
 option.120min: 2 Stunden
+option.150min: 2,5 Stunden
+option.180min: 3 Stunden
+option.210min: 3,5 Stunden
 option.240min: 4 Stunden
+option.270min: 4,5 Stunden
+option.300min: 5 Stunden
+option.330min: 5,5 Stunden
+option.360min: 6 Stunden
+option.390min: 6,5 Stunden
+option.420min: 7 Stunden
+option.450min: 7,5 Stunden
 option.480min: 8 Stunden
 label.scheduleMeeting: Einen Termin finden
 help:
