updated patch, added translation

--- a/translations/messages+intl-icu.de.xlf
+++ b/translations/messages+intl-icu.de.xlf
@@ -1311,6 +1311,10 @@
         <source>Einladungsemail erneut senden</source>
         <target>Einladungsemail erneut senden</target>
       </trans-unit>
+      <trans-unit id="hHvw6Fd" resname="Hallo {firstName} {lastName}">
+        <source>Hallo {firstName} {lastName}</source>
+        <target>__Hallo {firstName} {lastName}</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
