now the moderator can choose if the event should be shown if there are no more spaces. the full romms are shown with a red dot and free rooms with a green dot **default is show the full events**

--- a/translations/form.de.yml
+++ b/translations/form.de.yml
@@ -76,7 +76,7 @@ label:
   entryDateTime: Einlass
   promoter: Veranstalter
   additionalInfo: Zusätzliche Info (Markdown)
-
+  showInCalendarWhenNoSpace: Termin im Kalender ausblenden wenn keine Plätze mehr vorhanden
 choice:
   tls: STARTTLS/TLS
   ssl: SSL
