--- a/translations/messages+intl-icu.de.xlf
+++ b/translations/messages+intl-icu.de.xlf
@@ -1315,6 +1315,10 @@
         <source>Hallo {firstName} {lastName}</source>
         <target>Hallo {firstName} {lastName}</target>
       </trans-unit>
+      <trans-unit id="r4wWrtL" resname="Ausgebucht">
+        <source>Ausgebucht</source>
+        <target>Ausgebucht</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
