--- a/translations/messages+intl-icu.de.xlf
+++ b/translations/messages+intl-icu.de.xlf
@@ -1003,6 +1003,18 @@
         <source>Ausgebucht</source>
         <target>Ausgebucht</target>
       </trans-unit>
+      <trans-unit id="C16F3SU" resname="Ausstehend">
+        <source>Ausstehend</source>
+        <target>Ausstehend</target>
+      </trans-unit>
+      <trans-unit id="VyfyhV_" resname="Wenn Sie diese Person zur Teilnehmerliste hinzufügen, wird die E-Mailadresse nicht überprüft. Bitte überprüfen Sie die Person persönlich">
+        <source>Wenn Sie diese Person zur Teilnehmerliste hinzufügen, wird die E-Mailadresse nicht überprüft. Bitte überprüfen Sie die Person persönlich</source>
+        <target>Wenn Sie diese Person zur Teilnehmerliste hinzufügen, wird die E-Mailadresse nicht überprüft. Bitte überprüfen Sie die Person persönlich</target>
+      </trans-unit>
+      <trans-unit id="jIBBbk." resname="Bestätigen Sie die E-Mailadresse nur, wenn Sie die Person persönlich überprüft haben.">
+        <source>Bestätigen Sie die E-Mailadresse nur, wenn Sie die Person persönlich überprüft haben.</source>
+        <target>Bestätigen Sie die E-Mailadresse nur, wenn Sie die Person persönlich überprüft haben.</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
