--- a/translations/form.de.yml
+++ b/translations/form.de.yml
@@ -79,6 +79,7 @@ label:
   showInCalendarWhenNoSpace: Termin im Kalender ausblenden wenn keine Plätze mehr vorhanden
   textWhenNoSpace: Text wenn keine Plätze mehr vorhanden
   silentMode: Keine E-Mail Benachrichtigung
+  textWhenRoomWarteliste: Wartelistentext
 choice:
   tls: STARTTLS/TLS
   ssl: SSL
